# factory-api

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go
cmd/server/: server.go
configuration/: base.yaml  development.yaml  local.yaml
internal/datastore/: projects.go
internal/errors/: response.go  response_test.go
internal/modules/projects/: controller.go  handler.go
internal/webhooks/: handler.go
migrations/: 20230627201818_create_projects.sql
pkg/config/: config.go
pkg/db/: db.go
pkg/types/: project.go
scripts/: init_db.sh
scripts/sql/: create_projects_table.sql
src/: main.rs
src/api/: configuration.rs  mod.rs  startup.rs  telemetry.rs
src/api/controller/: projects.rs
src/api/database/: projects.rs
src/api/models/: error.rs  mod.rs  projects.rs
src/api/routes/: health_check.rs  mod.rs  projects.rs  webhook.rs
