[package]
name = "factory_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "factory_api"
path = "src/lib.rs"

[[bin]]
name = "factory_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
anyhow = "1.0.71"
config = "0.13.3"
serde-aux = "4.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.7"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["json", "rustls-tls"]
